# https://towardsdatascience.com/5-simple-steps-to-package-and-publish-your-python-code-to-pypi-d9f5c43f9d4
[metadata]
name = reedwolf.rules
version = 0.0.1
author = Robert Lujo
author_email = trebor74hr@gmail.com
description = A library that extends and enrich existing structured and unstructured data model with declarative constraints and automatic evaluation logic.
long_description = file: README.md
long_description_content_type = text/markdown
# git@github.com:trebor74hr/reedwolf.rules.git
url = https://github.com/trebor74hr/reedwolf.rules.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# https://github.com/pypa/sample-namespace-packages/tree/master/native/pkg_a
# https://setuptools.pypa.io/en/latest/setuptools.html
# https://github.com/zopefoundation/zope.interface/blob/master/setup.py
#
# packages = find:
# packages = find_namespace_packages(include=['reedwolf.*'])
# packages = ['reedwolf.rules'],
# namespace_packages=["zope"],o
packages = reedwolf.rules
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#using-a-src-layout
package_dir =
     = src
python_requires = >=3.7
include_package_data = True

[options.packages.find]
where=src
